Worked further on quite a few in-progress things like trait assigner. Also a lot of design updoots.

--- a/SimTECH/SimTECH/Pages/Climates/Index.razor
+++ b/SimTECH/SimTECH/Pages/Climates/Index.razor
@@ -45,11 +45,11 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Terminology" />
-            <PropertyColumn Property="e => e!.IsWet" Title="For wet" />
-            <PropertyColumn Property="e => e!.EngineMultiplier" Title="Engine" HeaderClass="hide-sort-icons" />
-            <PropertyColumn Property="e => e!.ReliablityModifier" Title="REL" HeaderClass="hide-sort-icons" />
-            <PropertyColumn Property="e => e!.RngModifier" Title="RNG" HeaderClass="hide-sort-icons" />
-            <PropertyColumn Property="e => e!.Odds" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.IsWet" Title="For wet" />
+            <PropertyColumn Property="e => e.EngineMultiplier" Title="Engine" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.ReliablityModifier" Title="REL" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.RngModifier" Title="RNG" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.Odds" HeaderClass="hide-sort-icons" />
             <TemplateColumn T="Climate" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
