--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
@@ -28,13 +28,16 @@
                           Class="mt-0 field-md" />
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
-                <MudButton StartIcon="@Icons.Material.Filled.Archive" IconSize="Size.Small" OnClick="ToggleDisplayArchived">
+                <MudButton StartIcon="@Icons.Material.Filled.Archive" IconSize="Size.Small" OnClick="ToggleDisplayArchived" Class="btn-md">
                     @(showingArchived ? "Active" : "Archive")
                 </MudButton>
-                <MudButton OnClick="GoToHumanGenerator">
+                <MudButton StartIcon="@Icons.Material.Filled.Sync" IconSize="Size.Small" OnClick="GoToHumanGenerator" Class="btn-md">
                     Generate
                 </MudButton>
-                <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddDriver">
+                <MudButton StartIcon="@Icons.Material.Filled.Add"
+                           IconSize="Size.Small"
+                           OnClick="AddDriver"
+                           Class="btn-md">
                     New
                 </MudButton>
             </MudButtonGroup>
