--- a/SimTECH/SimTECH/Pages/Manufacturers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Manufacturers/Index.razor
@@ -13,7 +13,15 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Tyre suppliers</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem" Class="btn-md">New</MudButton>
+            <MudButton Variant="Variant.Outlined"
+                       Color="Color.Tertiary"
+                       Size="Size.Small"
+                       StartIcon="@Icons.Material.Filled.Add"
+                       IconSize="Size.Small"
+                       OnClick="AddItem"
+                       Class="btn-md">
+                New
+            </MudButton>
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">These values do not apply when using wet tyres.</MudText>
     </MudPaper>
