--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
@@ -9,7 +9,7 @@
                     <MudText Typo="Typo.h3">Post race</MudText>
 
                     <div class="d-flex flex-row-reverse" style="width:30%">
-                        <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
+                        <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Outlined">
                             <MudTooltip Text="Standings" Placement="Placement.Top" Color="Color.Tertiary">
                                 <MudIconButton Icon="@Icons.Material.Filled.AutoGraph" OnClick="GoToOverview" Class="btn-sm" />
                             </MudTooltip>
