--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -14,7 +14,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Large">
     <CascadingValue Value="@DevelopModel">
-        <MudGrid>
+        <MudGrid Spacing="1">
             <MudItem xs="12">
                 <MudPaper Elevation="15" MinHeight="60px" Class="pa-2 text-center">
                     <MudText Typo="Typo.h3">Entrant development</MudText>
