--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
@@ -22,7 +22,12 @@
 
             @if (variableRaceLength)
             {
-                <MudNumericField T="int" @bind-Value="model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Class="field-md" />
+                <MudNumericField T="int"
+                                 @bind-Value="model.RaceLength"
+                                 Step="10"
+                                 Label="RaceLength"
+                                 HelperText="Should round to nearest ten"
+                                 Class="field-md" />
             }
 
             @if (errorValidations.Any())
