--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/CalendarTab/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/CalendarTab/Calendar.razor
@@ -9,7 +9,7 @@
                            IconColor="Color.Primary"
                            Variant="Variant.Outlined"
                            Color="Color.Primary"
-                           Size="Size.Large"
+                           Size="Size.Small"
                            OnClick="AddRaces"
                            Class="btn-md">
                     Add races
