--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
@@ -26,16 +26,16 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.TeamName" Title="Team" CellClass="overflow-hider" CellStyleFunc="@SimpleCellStyle" />
-            <PropertyColumn Property="e => e!.Engine" Title="Engine" HeaderClass="hide-sort-icons" />
-            <PropertyColumn Property="e => e!.Manufacturer" Title="Supplier" HeaderClass="hide-sort-icons" />
-            <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Engine" Title="Engine" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.Manufacturer" Title="Supplier" HeaderClass="hide-sort-icons" />
+            <PropertyColumn Property="e => e.QualyPower" Title="Q.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.RacePower" Title="R.PWR" HeaderClass="hide-sort-icons" CellClass="font-caption" />
             <TemplateColumn T="PowerRankingItem" Title="A/C/P" SortBy="e => e.CarPartAvg" HeaderClass="hide-sort-icons">
                 <CellTemplate>
                     <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.RelAvg" Title="REL.AVG" HeaderClass="hide-sort-icons" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.RelAvg" Title="REL.AVG" HeaderClass="hide-sort-icons" CellClass="font-caption" />
         </Columns>
         <ChildRowContent>
             <MudText Color="Color.Warning">Should still be designed properly</MudText>
