--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SettingsTab/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SettingsTab/Settings.razor
@@ -4,9 +4,15 @@
             <MudStack Row="true">
                 <MudText Typo="Typo.h3">Settings</MudText>
                 <MudSpacer />
-                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason" Class="btn-md">Edit</MudButton>
+                <MudButton Variant="Variant.Outlined"
+                           Color="Color.Tertiary"
+                           Size="Size.Small"
+                           StartIcon="@Icons.Material.Outlined.Edit"
+                           OnClick="UpdateSeason"
+                           Class="btn-md">
+                    Edit
+                </MudButton>
             </MudStack>
-            <MudText Typo="Typo.body2" Color="Color.Warning">Fucking ugly page, targeted for re-design.</MudText>
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
