--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -131,7 +131,7 @@ th {
 }
 
 .btn-md {
-    width: 150px;
+    width: 125px;
 }
 
 .pb-20 {
@@ -149,6 +149,10 @@ th {
 
 .flex-stretch-items > * {
     flex: 1 1 auto;
+}
+
+.flex-stretch-equal > * {
+    flex: 1 1 0;
 }
 
 /* colours */
