--- a/SimTECH/SimTECH/Pages/Entrants/Engines/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Engines/Index.razor
@@ -13,17 +13,19 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
-            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
+            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
                 <MudButton OnClick="ToggleDisplayArchived" Class="btn-md">
                     @(showingArchived ? "Active" : "Archive")
                 </MudButton>
-                <MudButton OnClick="AddEngine" Class="btn-md">New</MudButton>
+                <MudButton StartIcon="@Icons.Material.Filled.Add" IconSize="Size.Small" OnClick="AddEngine" Class="btn-md">
+                    New
+                </MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="Engine" Items="@engines" RowsPerPage="15" Dense="true">
         <Columns>
-            <PropertyColumn Property="e => e!.Name" />
+            <PropertyColumn Property="e => e.Name" />
             <TemplateColumn T="Engine">
                 <CellTemplate>
                     <MudButtonGroup Size="@Size.Small">
