--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonDrivers.razor
@@ -3,10 +3,17 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Drivers</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="AddItem" Class="btn-md">New</MudButton>
+            <MudButton Variant="Variant.Outlined"
+                       Color="Color.Success"
+                       Size="Size.Small"
+                       StartIcon="@Icons.Material.Outlined.Add"
+                       OnClick="AddItem"
+                       Class="btn-md">
+                New
+            </MudButton>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="SeasonDriverList" Items="@DriverList" Dense="true" Loading="@loading">
+    <MudDataGrid T="SeasonDriverList" Items="@DriverItems" Dense="true" Loading="@loading">
         <Columns>
             <TemplateColumn T="SeasonDriverList" Sortable="false" Class="accent-cell">
                 <CellTemplate>
@@ -22,7 +29,7 @@
                     </MudStack>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Age" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Age" CellClass="font-caption" />
             <TemplateColumn T="SeasonDriverList" SortBy="e => e.Number" Title="NO" HeaderClass="number-col hide-sort-icons" CellClass="number-col">
                 <CellTemplate>
                     <NumberDisplay Colour="@context.Item.Colour" Accent="@context.Item.Accent">@context.Item.Number</NumberDisplay>
@@ -48,7 +55,7 @@
 
     [Parameter] public EventCallback<SeasonDriver?> OnEditorOpen { get; set; }
 
-    private List<SeasonDriverList> DriverList { get; set; } = new();
+    private List<SeasonDriverList> DriverItems { get; set; } = new();
 
     bool loading = true;
 
@@ -57,7 +64,7 @@
     {
         loading = true;
 
-        DriverList.Clear();
+        DriverItems.Clear();
 
         foreach (var driver in OverviewModel.ClassDrivers())
         {
@@ -81,7 +88,7 @@
                 SeasonDriver = driver
             };
 
-            DriverList.Add(listing);
+            DriverItems.Add(listing);
         }
 
         loading = false;
