--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/SeasonTeams.razor
@@ -3,31 +3,38 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Teams</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterItem" Class="btn-md">New</MudButton>
+            <MudButton Variant="Variant.Outlined"
+                       Color="Color.Success"
+                       Size="Size.Small"
+                       StartIcon="@Icons.Material.Outlined.Add"
+                       OnClick="AddItem"
+                       Class="btn-md">
+                New
+            </MudButton>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="SeasonTeamList" Items="@seasonTeams" Dense="true" Loading="@loading" Class="overflow-hider">
+    <MudDataGrid T="SeasonTeamList" Items="@TeamItems" Dense="true" Loading="@loading" Class="overflow-hider">
         <Columns>
             <TemplateColumn Sortable="false" Class="accent-cell">
                 <CellTemplate>
                     <SmolAccent Colour="@context.Item?.Colour" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Name" />
+            <PropertyColumn Property="e => e.Name" />
             <TemplateColumn T="SeasonTeamList" SortBy="e => e.Country" Title="Country">
                 <CellTemplate>
                     <CountryNamedFlag Code="@context.Item.Country" Size="ElementSize.Small" Reverse="true" Typo="Typo.body2" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Principal" />
-            <PropertyColumn Property="e => e!.BaseValue" Title="Base" CellClass="font-caption" />
+            <PropertyColumn Property="e => e.Principal" />
+            <PropertyColumn Property="e => e.BaseValue" Title="Base" CellClass="font-caption" />
             <TemplateColumn T="SeasonTeamList" Title="A/C/P" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e!.Reliability" CellClass="font-caption" Title="REL" />
-            <PropertyColumn Property="e => e!.Engine" />
+            <PropertyColumn Property="e => e.Reliability" CellClass="font-caption" Title="REL" />
+            <PropertyColumn Property="e => e.Engine" />
             <TemplateColumn T="SeasonTeamList" SortBy="e => e.Manufacturer" Title="Manufacturer">
                 <CellTemplate>
                     <SupplierDisplay Colour="@context.Item.ManColour" Accent="@context.Item.ManAccent">
@@ -51,7 +58,7 @@
 
     [Parameter] public EventCallback<SeasonTeam?> OnEditorOpen { get; set; }
 
-    private List<SeasonTeamList> seasonTeams = new();
+    private List<SeasonTeamList> TeamItems = new();
 
     private bool loading = true;
 
@@ -60,7 +67,7 @@
     {
         loading = true;
 
-        seasonTeams.Clear();
+        TeamItems.Clear();
 
         foreach (var team in OverviewModel.ClassTeams())
         {
@@ -86,13 +93,13 @@
                 SeasonTeam = team
             };
 
-            seasonTeams.Add(listing);
+            TeamItems.Add(listing);
         }
 
         loading = false;
     }
 
-    async Task EnterItem() => await UpdateItem(null);
+    async Task AddItem() => await UpdateItem(null);
     async Task UpdateItem(SeasonTeam? item)
     {
         await OnEditorOpen.InvokeAsync(item);
