--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
@@ -72,11 +72,12 @@
     </RowTemplate>
 </MudTable>
 
-@code {
+    @code {
     [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
     [Parameter] public Dictionary<int, Country> CountryRounds { get; set; }
     [Parameter] public List<StandingTeamModel> StandingConstructors { get; set; }
+    [Parameter] public EventCallback OnOpenWccChart { get; set; }
 
     int lowestScoringPosition = 10;
 
@@ -88,7 +89,6 @@
 
     async Task ShowWccResultGraph()
     {
-        var parameters = new DialogParameters { ["Teams"] = StandingConstructors, ["Season"] = OverviewModel.Season };
-        _ = await _dialog.ShowAsync<WccResultChart>("WCC results chart", parameters, Globals.StatisticDialogDefaultOptionsXl);
+        await OnOpenWccChart.InvokeAsync();
     }
 }
