--- a/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
@@ -1,6 +1,8 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">Modify trait</MudText>
+        <MudText Typo="Typo.h5">
+            @(Model.IsNew ? "Add new trait" : $"Modify {Model.Name}")
+        </MudText>
     </TitleContent>
     <DialogContent>
         <MudForm>
@@ -10,7 +12,7 @@
                         <MudTextField @bind-Value="Model.Name" Label="Name" Class="field-md" />
                         <div>
                             <MudText Typo="Typo.subtitle2">Entrant type</MudText>
-                            @if (Model.Id == 0)
+                            @if (Model.IsNew)
                             {
                                 <MudChipSet @bind-SelectedChip="entrantChip">
                                     @foreach (var entrant in EntrantEnumHelper.GetEntrantSelection)
@@ -25,10 +27,11 @@
                             }
                         </div>
                         <div>
-                            <MudText Typo="Typo.subtitle2">Only when conditions are wet</MudText>
                             <MudSwitchM3 @bind-Checked="Model.ForWetConditions"
                                          ThumbIcon="@Icons.Material.Filled.Done"
                                          ThumbOffIcon="@Icons.Material.Filled.Close"
+                                         Label="Only when conditions are wet"
+                                         LabelPosition="LabelPosition.End"
                                          Color="Color.Tertiary" />
                         </div>
                     </MudStack>
@@ -43,7 +46,7 @@
                     <MudText Typo="Typo.h6">Modifiers</MudText>
                     <MudDivider />
                 </MudItem>
-                <MudItem xs="8">
+                <MudItem xs="6">
                     <MudStack Class="pa-0">
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
                             <MudNumericField T="int" @bind-Value="Model.QualifyingPace" Label="Pace (qualifying)" />
@@ -54,17 +57,16 @@
                             <MudNumericField T="int" @bind-Value="Model.Defense" Label="Defense" />
                         </MudStack>
                         <div>
-                            <MudText Typo="Typo.subtitle2">Reliability</MudText>
+                            <MudText Typo="Typo.subtitle1">Reliability</MudText>
                             <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                                <MudNumericField T="int" @bind-Value="Model.DriverReliability" Label="Driver" HideSpinButtons="true" />
-                                <MudNumericField T="int" @bind-Value="Model.CarReliability" Label="Car" HideSpinButtons="true" />
-                                <MudNumericField T="int" @bind-Value="Model.EngineReliability" Label="Engine" HideSpinButtons="true" />
+                                <MudNumericField T="int" @bind-Value="Model.DriverReliability" Label="Driver" />
+                                <MudNumericField T="int" @bind-Value="Model.CarReliability" Label="Car" />
+                                <MudNumericField T="int" @bind-Value="Model.EngineReliability" Label="Engine" />
                             </MudStack>
                         </div>
                     </MudStack>
                 </MudItem>
-                <MudItem xs="4">
-                    <MudText Typo="Typo.body2" Color="Color.Info">Wear is subtracted from tyre. Higher number = more wear.</MudText>
+                <MudItem xs="6">
                     <MudRangeSlider @bind-Value="Model.WearMin"
                                     @bind-UpperValue="Model.WearMax"
                                     Size="Size.Large"
@@ -76,28 +78,30 @@
                                     Min="-5"
                                     Max="5"
                                     MinDistance="0">
-                        <div class="d-flex flex-row align-items-center gap-2">
-                            <MudText Typo="Typo.subtitle2">Tyre wear</MudText>
-                            <MudText Typo="Typo.caption">[@Model.WearMin - @Model.WearMax]</MudText>
-                        </div>
+                        <MudText Typo="Typo.subtitle1">Tyre wear</MudText>
+                        <MudText Typo="Typo.body2" Color="Color.Info">Wear is subtracted from tyre. Higher value = more wear.</MudText>
                     </MudRangeSlider>
+                    <div class="d-flex flex-row justify-center">
+                        <MudText Typo="Typo.caption">[@Model.WearMin - @Model.WearMax]</MudText>
+                    </div>
 
                     <MudRangeSlider @bind-Value="Model.RngMin"
                                     @bind-UpperValue="Model.RngMax"
                                     Size="Size.Large"
-                                    Variant="Variant.Filled"
+                                    Variant="Variant.Outlined"
                                     Range="true"
                                     TickMarks="true"
+                                    Display="true"
                                     Color="Color.Tertiary"
                                     Step="1"
                                     Min="-10"
                                     Max="10"
                                     MinDistance="0">
-                        <div class="d-flex flex-row justify-space-between align-items-center">
-                            <MudText Typo="Typo.subtitle2">RNG per advance</MudText>
-                            <MudText Typo="Typo.caption">[@Model.RngMin - @Model.RngMax]</MudText>
-                        </div>
+                        <MudText Typo="Typo.subtitle2">RNG per advance</MudText>
                     </MudRangeSlider>
+                    <div class="d-flex flex-row justify-center">
+                        <MudText Typo="Typo.caption">[@Model.RngMin - @Model.RngMax]</MudText>
+                    </div>
                 </MudItem>
             </MudGrid>
         </MudForm>
